content adjustment,spacing,correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -905,7 +905,7 @@ section {
   
  }
   #extra-about .box1 {
-    padding: 50px 30px;
+    padding: 30px 10px;
     margin-bottom: 50px;
     text-align: center;
     border: 1px solid #8B4513;
